--- a/supportOffice/packages.config
+++ b/supportOffice/packages.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BitMiracle.LibTiff.NET" version="2.4.649" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.22.3" targetFramework="net472" />
+  <package id="Grpc" version="2.46.6" targetFramework="net472" />
+  <package id="Grpc.Core" version="2.46.6" targetFramework="net472" />
+  <package id="Grpc.Core.Api" version="2.46.6" targetFramework="net472" />
+  <package id="IronPdf" version="2023.7.4" targetFramework="net472" />
+  <package id="IronPdf.Native.Chrome.Windows" version="2023.7.15762" targetFramework="net472" />
+  <package id="IronPdf.NetFramework.Extension" version="2023.6.2" targetFramework="net472" />
+  <package id="IronPdf.Slim" version="2023.7.4" targetFramework="net472" />
+  <package id="IronSoftware.Native.PdfModel" version="2023.7.15762" targetFramework="net472" />
+  <package id="IronSoftware.System.Drawing" version="2023.7.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net472" />
+  <package id="SixLabors.ImageSharp" version="2.1.3" targetFramework="net472" />
   <package id="Spire.PDF" version="9.7.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
 </packages>
