--- a/supportOffice/packages.config
+++ b/supportOffice/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.Words" version="23.7.0" targetFramework="net472" />
   <package id="BitMiracle.LibTiff.NET" version="2.4.649" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.22.3" targetFramework="net472" />
+  <package id="GroupDocs.Merger" version="23.5.0" targetFramework="net472" />
   <package id="Grpc" version="2.46.6" targetFramework="net472" />
   <package id="Grpc.Core" version="2.46.6" targetFramework="net472" />
   <package id="Grpc.Core.Api" version="2.46.6" targetFramework="net472" />
@@ -12,11 +14,17 @@
   <package id="IronPdf.Slim" version="2023.7.4" targetFramework="net472" />
   <package id="IronSoftware.Native.PdfModel" version="2023.7.15762" targetFramework="net472" />
   <package id="IronSoftware.System.Drawing" version="2023.7.1" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net472" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="net472" />
   <package id="SixLabors.ImageSharp" version="2.1.3" targetFramework="net472" />
   <package id="Spire.PDF" version="9.7.0" targetFramework="net472" />
+  <package id="Syncfusion.Compression.Net.Core" version="22.1.39" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="22.1.39" targetFramework="net472" />
+  <package id="Syncfusion.Pdf.Net.Core" version="22.1.39" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
